# Team8

./: .gitignore  README.md  protocol.md  pyproject.toml
bots/: aggressive_strategy_bot.py  always_accuse_bot.py  andrena_random_bot.py  conservative_strategy_bot.py  data_logger.py  dummy_game.yaml  random_bot.py
bots/lib/: high_level_api.py  template_bot.py
example-bots/java/: README.md  pom.xml
example-bots/java/src/main/java/maexchen/: Main.java
example-bots/java/src/main/java/maexchen/simpleBot/: SimpleBot.java
example-bots/java/src/main/resources/: server.properties
example-bots/python/: README.md  random_bot.py
example-bots/python/lib/: high_level_api.py  udp.py
example-bots/python/src/: tools.py
example-bots/python/test/: test_udp.py
machine-learning/lie-detctor/: ml_v1.py
src/: pyproject.toml
src/duckling/bots/: aggressive_strategy_bot.py  always_accuse_bot.py  andrena_random_bot.py  binom_ml_bot.py  bot.py  combine_winning_strategies_bot.py  conservative_strategy_bot.py  data_logger.py  random_bot.py  random_ml_bot.py  strategies.py  strategy_bot.py  template_bot.py  weighted_dist_ml_bot.py
src/duckling/lib/: high_level_api.py  tools.py  udp.py
src/duckling/machine-learning/lie-detctor/: ml_v1.py
src/duckling/machine_learning/lie_detctor/: lie_detector.py  ml_v1.py  model_30_09_2020_12_38_04.pickle  model_30_09_2020_12_39_12.pickle  model_30_09_2020_12_40_14.pickle  model_30_09_2020_13_58_23.pickle  model_30_09_2020_15_54_02.pickle
src/duckling/test/: test_udp.py
test/: test_udp.py
(+5 files in other folders)
